# panshi-living-market

./: .dockerignore  .gitignore  AGENTS.md  BACKLOG.md  Cargo.toml  README.md  THIRD_PARTY_NOTICES.md  buf.yaml  openapi-ts.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rust-toolchain.toml
.agents/: product-marketing.md
.github/workflows/: contract-audit.yml  engineering.yml
adr/: 0001-first-production-slice.md  0002-canonical-decision-and-event-bytes.md
apps/web/: index.html  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
apps/web/public/: manifest.webmanifest  study-release.json  study-sw.js
apps/web/public/art/: README.md
apps/web/public/art/v4/: README.md
apps/web/public/art/v4/layers/: README.md
apps/web/public/icons/: README.md
apps/web/src/: App.tsx  StudyRoot.test.ts  StudyRoot.tsx  interaction.test.ts  interaction.ts  main.tsx  placement.test.ts  placement.ts  scene.test.ts  scene.ts  study.test.ts  study.ts  studyExportValidation.test.ts  studyExportValidation.ts  studyRecorder.test.ts  studyRecorder.ts  studyRelease.test.ts  studyRelease.ts  studyRoutes.ts  studyStorage.ts  styles.css  vite-env.d.ts
apps/web/tools/: verify-study-export.mjs
contracts/openapi/: public-v1.yaml
contracts/policy/: command-transition-map.yaml  decision-v1.json
contracts/proto/panshi/common/v1/: envelope.proto
contracts/proto/panshi/game/v1/: decision.proto  desk.proto
contracts/sealed-facts/v1/: README.md  schema.json  test-vector.json
crates/application/: Cargo.toml
crates/application/src/: lib.rs  projection.rs
crates/decision-kernel/: Cargo.toml
crates/decision-kernel/src/: decision.rs  fixed.rs  lib.rs  utility.rs
crates/domain/: Cargo.toml
crates/domain/src/: decision_session.rs  lib.rs  round_desk.rs  seat.rs
crates/event-store/: Cargo.toml
crates/event-store/migrations/: 0001_canonical_event_store.sql
crates/event-store/src/: lib.rs  postgres.rs
crates/event-store/tests/: postgres_vertical_slice.rs
crates/protocol/: Cargo.toml  build.rs
crates/protocol/src/: lib.rs
crates/rights/: Cargo.toml
crates/rights/src/: lib.rs
crates/scoring/: Cargo.toml
crates/scoring/src/: lib.rs
deploy/study/: Caddyfile  Dockerfile  README.md  smoke.sh
docs/: direction-reset.md  figjam-current-state.md  game-product-proposal.md  game-technical-architecture.md  product-constitution.md  repository-boundary.md
docs/architecture/: architecture-constitution.md  client-contract.md  event-catalog.md  state-payload-map.md
docs/design/: generated-asset-manifest.md  visual-system-brief.md
docs/research/: competitive-patterns.md
docs/reviews/: 2026-07-20-chatgpt-pro-gap-review.md  pre-code-readiness.md  vertical-slice-gate-2026-07-20.md
docs/ux/: user-journey.md
docs/v3/: competitive-reset.md  execution-handoff.md  product-reset.md  user-journey.md  visual-system.md
docs/v4/: interaction-prototype.md  origin-and-release-decision.md  product-north-star.md  prototype-review-2026-07-20.md  research-reset.md  study-mode.md
fixtures/bootstrap/: historical-round-v1.json
fixtures/historical/episode-001/: decision-input.json  expected-actions.json  input.pb  manifest.json  output.pb
licenses/: IBM-Plex-Mono-OFL-1.1.txt
services/decision-runner/: Cargo.toml
services/decision-runner/src/: main.rs
services/game-core/: Cargo.toml
services/game-core/src/: main.rs
services/projection-worker/: Cargo.toml
services/projection-worker/src/: main.rs
tools/: contract-audit.rb  fixture-audit.rb  remove-atlas-background.mjs  sealed-fact-audit.mjs  study-release-audit.mjs  verify-kernel-parity.sh
tools/bootstrap/: Cargo.toml
tools/bootstrap/src/: main.rs
tools/contracts/: check-boundaries.sh  install-buf.sh
tools/loadgen/: Cargo.toml
tools/replay/: Cargo.toml
tools/simulator/: Cargo.toml
tools/simulator/src/: lib.rs  main.rs
