[workspace]
resolver = "3"
members = [
  "crates/domain",
  "crates/protocol",
  "crates/event-store",
  "crates/application",
  "crates/decision-kernel",
  "crates/scoring",
  "crates/rights",
  "services/game-core",
  "services/decision-runner",
  "services/projection-worker",
  "tools/replay",
  "tools/simulator",
  "tools/loadgen",
  "tools/bootstrap",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.97.1"
repository = "https://github.com/weian-nomad/panshi-living-market"

[workspace.dependencies]
axum = "=0.8.9"
prost = "=0.14.4"
prost-build = "=0.14.4"
protoc-bin-vendored = "=3.2.0"
sha2 = "=0.11.0"
serde_json = "=1.0.149"
serde = { version = "=1.0.228", features = ["derive"] }
sqlx = { version = "=0.9.0", default-features = false, features = ["runtime-tokio", "postgres", "uuid", "json", "migrate", "macros"] }
tokio = { version = "=1.53.0", features = ["macros", "rt-multi-thread", "net", "signal", "time"] }
tower-http = { version = "=0.7.0", features = ["cors", "trace"] }
tracing = "=0.1.44"
tracing-subscriber = { version = "=0.3.22", features = ["env-filter", "fmt"] }
uuid = { version = "=1.22.0", features = ["serde"] }

[workspace.lints.rust]
unsafe_code = "forbid"
missing_debug_implementations = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
float_arithmetic = "deny"

[profile.release]
codegen-units = 1
lto = "thin"
strip = "symbols"
