[package]
name = "panshi-application"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
panshi-domain = { path = "../domain" }
panshi-decision-kernel = { path = "../decision-kernel" }
panshi-event-store = { path = "../event-store" }
panshi-protocol = { path = "../protocol" }
prost.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
sqlx.workspace = true
uuid.workspace = true

[lints]
workspace = true
