[package]
name = "panshi-projection-worker"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
panshi-application = { path = "../../crates/application" }
panshi-event-store = { path = "../../crates/event-store" }
sqlx.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
