[package]
name = "panshi-bootstrap"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
panshi-application = { path = "../../crates/application" }
panshi-event-store = { path = "../../crates/event-store" }
panshi-protocol = { path = "../../crates/protocol" }
serde_json.workspace = true
sha2.workspace = true
sqlx.workspace = true
tokio.workspace = true
uuid.workspace = true

[lints]
workspace = true
